Tuning frontend.Start of login page creation

--- a/public/Frontend/index.html
+++ b/public/Frontend/index.html
@@ -9,6 +9,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="../js/manifest.js"></script>
+  <script src="../js/vendor.js"></script>
   <script src="../js/main.js"></script>
-
 </html>
